make sure a review cannot be too wide

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -499,7 +499,7 @@ footer > ul > li > h6 {
 }
 
 .book-show-content > :nth-child(n){
-    padding-top: 5%;
+    padding-top: 1%;
 }
 
 #read-selector{
@@ -524,6 +524,7 @@ footer > ul > li > h6 {
     display: block;
     padding-top: 1vh;
     float: left;
+    max-width: 35%;
 }
 
 .review-user {
